Live import progress and tracks on results view

--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -57,7 +57,9 @@
     "imported": "تم الاستيراد",
     "skipped": "تم التخطي",
     "duplicates": "مكررات",
-    "time": "الوقت"
+    "time": "الوقت",
+    "recentlyImported": "تم استيرادها مؤخراً",
+    "recentlySkipped": "تم تخطيها مؤخراً"
   },
   "result": {
     "title": "اكتمل الاستيراد!",
