--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -57,7 +57,9 @@
     "imported": "Imported",
     "skipped": "Skipped",
     "duplicates": "Duplicates",
-    "time": "Time"
+    "time": "Time",
+    "recentlyImported": "Recently imported",
+    "recentlySkipped": "Recently skipped"
   },
   "result": {
     "title": "Import completed!",
