--- a/src/i18n/translations/ru.json
+++ b/src/i18n/translations/ru.json
@@ -57,7 +57,9 @@
     "imported": "Импортировано",
     "skipped": "Пропущено",
     "duplicates": "Дубликаты",
-    "time": "Время"
+    "time": "Время",
+    "recentlyImported": "Недавно импортированные",
+    "recentlySkipped": "Недавно пропущенные"
   },
   "result": {
     "title": "Импорт завершён!",
