--- a/src/i18n/translations/tr.json
+++ b/src/i18n/translations/tr.json
@@ -57,7 +57,9 @@
     "imported": "İçe aktarıldı",
     "skipped": "Atlandı",
     "duplicates": "Yinelenler",
-    "time": "Süre"
+    "time": "Süre",
+    "recentlyImported": "Son içe aktarılanlar",
+    "recentlySkipped": "Son atlananlar"
   },
   "result": {
     "title": "İçe aktarma tamamlandı!",
